// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcPopover component > should add the z-index level class if the level was given 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  popperclass="ec-popover ec-popover--level-3"
  shown="false"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should attach to a different element when provided 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="custom-element"
  data-test="ec-popover"
  disabled="false"
  popperclass="ec-popover"
  shown="false"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should merge default options with given additional options 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  popperclass="my-popover ec-popover"
  shown="false"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should pass default options when no additional props are given 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  popperclass="ec-popover"
  shown="false"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should render given slot 1`] = `
<ec-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  popperclass="ec-popover"
  shown="false"
>
  
  
  <div>
    Random text
  </div>
  
  
</ec-stub>
`;

exports[`EcPopover component > should render with custom attributes 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  class="my-class"
  container="body"
  data-test="my-data-test ec-popover"
  disabled="false"
  id="test-id"
  popperclass="ec-popover"
  shown="false"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should update options when additional options are also updated > after 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  placement="bottom"
  popperclass="ec-popover"
  shown="false"
  triggers="hover"
>
  
  
</v-dropdown-stub>
`;

exports[`EcPopover component > should update options when additional options are also updated > before 1`] = `
<v-dropdown-stub
  ariaid="ec-popover-1"
  arrowoverflow="true"
  autohide="false"
  container="body"
  data-test="ec-popover"
  disabled="false"
  placement="left"
  popperclass="ec-popover"
  shown="false"
  triggers="click"
>
  
  
</v-dropdown-stub>
`;
